--- a/src/Bintangku.WebUI/client/src/app/app.component.html
+++ b/src/Bintangku.WebUI/client/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h1>{{ title }}</h1>
-<ul>
-  <li *ngFor="let nakesUser of nakesUsers">
-    {{ nakesUser.id }} - {{ nakesUser.userName }}
-  </li>
-</ul>
+<app-nav></app-nav>
+
+<div class="container" style="margin-top: 100px">
+  <router-outlet></router-outlet>
+</div>
