--- a/src/Bintangku.WebUI/client/src/app/nav/nav.component.html
+++ b/src/Bintangku.WebUI/client/src/app/nav/nav.component.html
@@ -1,19 +1,26 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top nav-background-color">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Bintangku</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+      >Bintangku</a
+    >
 
+    <!-- Navigation Item -->
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/"
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/" routerLinkActive="active"
           >Home <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/nakes">Nakes</a>
+        <a class="nav-link" routerLink="/nakes" routerLinkActive="active"
+          >Nakes</a
+        >
       </li>
     </ul>
+    <!-- End - Navigation Item  -->
 
-    <div class="dropdown" *ngIf="accountService.currentUser$ | async">
+    <!-- Dropdown User when login -->
+    <div class="dropdown" *ngIf="accountService.currentUser$ | async as user">
       <button
         class="btn btn-primary dropdown-toggle"
         type="button"
@@ -22,7 +29,7 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        Welcome User
+        Welcome {{ user.username | titlecase }}
       </button>
       <div class="dropdown-menu mt-2" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item">Edit Profil</a>
@@ -30,7 +37,9 @@
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
+    <!-- End - Dropdown User when login -->
 
+    <!-- Account Navigation -->
     <div *ngIf="(accountService.currentUser$ | async) === null">
       <a type="button" class="btn btn-outline-primary mr-2" routerLink="/login"
         >Login</a
@@ -39,32 +48,6 @@
         >Register</a
       >
     </div>
-
-    <!-- <form
-      *ngIf="(accountService.currentUser$ | async) === null"
-      class="form-inline mt-2 mt-md-0"
-      (ngSubmit)="login()"
-      autocomplete="off"
-    >
-      <input
-        name="username"
-        [(ngModel)]="model.username"
-        class="form-control mr-sm-2"
-        type="text"
-        placeholder="Login"
-        aria-label="Search"
-      />
-      <input
-        name="password"
-        [(ngModel)]="model.password"
-        class="form-control mr-sm-2"
-        type="password"
-        placeholder="Password"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Login
-      </button>
-    </form> -->
+    <!-- End - Account Navigation -->
   </div>
 </nav>
