--- a/src/Bintangku.WebUI/client/src/app/nav/nav.component.html
+++ b/src/Bintangku.WebUI/client/src/app/nav/nav.component.html
@@ -6,14 +6,21 @@
 
     <!-- Navigation Item -->
     <ul class="navbar-nav mr-auto">
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" routerLinkActive="active"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/nakes" routerLinkActive="active"
+            >Nakes</a
+          >
+        </li>
+      </ng-container>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/" routerLinkActive="active"
-          >Home <span class="sr-only">(current)</span></a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/nakes" routerLinkActive="active"
-          >Nakes</a
+        <a class="nav-link" routerLink="/errors" routerLinkActive="active"
+          >Errors</a
         >
       </li>
     </ul>
