Data Anak - fixing needed

--- a/src/Bintangku.WebUI/client/src/app/memberNakes/nakes-card/nakes-card.component.html
+++ b/src/Bintangku.WebUI/client/src/app/memberNakes/nakes-card/nakes-card.component.html
@@ -4,7 +4,7 @@
       class="card-img-top"
       src="{{ memberNakes.photoUrl || './assets/images/user.png' }}"
       alt="{{ memberNakes.username }}"
-      routerLink="/nakes/{{ memberNakes.username }}"
+      routerLink="/nakes-members/{{ memberNakes.username }}"
     />
     <ul class="list-inline member-icons animate text-center"></ul>
   </div>
