--- a/src/Bintangku.WebUI/client/src/app/app.component.html
+++ b/src/Bintangku.WebUI/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav></app-nav>
 
-<div class="container" style="margin-top: 100px">
+<div class="container content">
   <router-outlet></router-outlet>
 </div>
+
+<app-footer></app-footer>
