--- a/src/Bintangku.WebUI/client/src/app/nav/nav.component.html
+++ b/src/Bintangku.WebUI/client/src/app/nav/nav.component.html
@@ -8,16 +8,24 @@
     <ul class="navbar-nav mr-auto">
       <ng-container *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active"
-            >Home <span class="sr-only">(current)</span></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/nakes" routerLinkActive="active"
-            >Nakes</a
+          <a class="nav-link" routerLink="/dash-board" routerLinkActive="active"
+            >Dashboard</a
           >
         </li>
       </ng-container>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/nakes-members"
+          routerLinkActive="active"
+          >Tenaga Kesehatan <span class="sr-only">(current)</span></a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/anak-members" routerLinkActive="active"
+          >Data Anak <span class="sr-only">(current)</span></a
+        >
+      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/errors" routerLinkActive="active"
           >Errors</a
@@ -39,7 +47,7 @@
         Welcome {{ user.username | titlecase }}
       </button>
       <div class="dropdown-menu mt-2" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item">Edit Profil</a>
+        <a class="dropdown-item" routerLink="/nakes-member/edit">Edit Profil</a>
         <div class="dorpdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
