--- a/src/Bintangku.WebUI/client/src/styles.css
+++ b/src/Bintangku.WebUI/client/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+.content {
+  padding: 20px;
+  min-height: 100%;
+  margin: 0 auto -50px;
+  margin-top: 50px;
+}
+.footer,
+.push {
+  height: 50px;
+}
+
+* {
+  box-sizing: border-box;
+}
+body {
+  font: 16px Sans-Serif;
+}
+h1 {
+  margin: 0 0 20px 0;
+}
+p {
+  margin: 20px 0 0 0;
+}
+footer {
+  background: #42a5f5;
+  color: white;
+  line-height: 50px;
+  padding: 0 20px;
+  margin-top: 30px;
+}
