--- a/src/Bintangku.WebUI/client/src/styles.css
+++ b/src/Bintangku.WebUI/client/src/styles.css
@@ -34,3 +34,6 @@ footer {
   padding: 0 20px;
   margin-top: 30px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
