--- a/src/Bintangku.WebUI/client/src/styles.css
+++ b/src/Bintangku.WebUI/client/src/styles.css
@@ -35,5 +35,11 @@ footer {
   margin-top: 30px;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
