--- a/src/Bintangku.WebUI/client/src/styles.css
+++ b/src/Bintangku.WebUI/client/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; */
+
 html,
 body {
   height: 100%;
@@ -19,10 +21,12 @@ body {
   box-sizing: border-box;
 }
 body {
+  margin: 0;
   font: 16px Sans-Serif;
 }
 h1 {
   margin: 0 0 20px 0;
+  text-align: center;
 }
 p {
   margin: 20px 0 0 0;
@@ -42,4 +46,20 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* for sidenav to take a whole page */
+html,
+body {
+  margin: 0;
+  height: 100%;
 }
