--- a/src/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/gpph/gpph.component.html
+++ b/src/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/gpph/gpph.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Petunjuk KPSP</h2>
+<h2 mat-dialog-title>Petunjuk GPPH</h2>
 <mat-dialog-content class="mat-typography">
   <!-- KPSP -->
   <mat-list role="list">
@@ -25,28 +25,7 @@
       </li></mat-list-item
     >
   </mat-list>
-  <!-- FIXME: Nested list unfinished -->
-  <mat-list role="list">
-    <mat-list-item role="listitem">
-      <li>KPSP terdiri ada 2 macam pertanyaan, yaitu:</li>
-    </mat-list-item>
-    <mat-list role="list">
-      <mat-list-item role="listitem">
-        <li>
-          Pertanyaan yang dijawab oleh ibu/pengasuh anak, contoh: "Dapatkah bayi
-          makan kue sendiri ?"
-        </li>
-      </mat-list-item>
-      <mat-list-item role="listitem">
-        <li>
-          Perintah kepada ibu/pengasuh anak atau petugas melaksanakan tugas yang
-          tertulis pada KPSP. Contoh: "Pada posisi bayi anda telentang, tariklah
-          bayi pada pergelangan tangannya secara perlahan-lahan ke posisi
-          duduk''.
-        </li>
-      </mat-list-item>
-    </mat-list>
-  </mat-list>
+
   <mat-list role="list">
     <mat-list-item role="listitem"
       ><li>
@@ -83,21 +62,17 @@
   <!-- End - KPSP -->
 
   <!--  -->
-  <h3>Questionnaire</h3>
-  <h3>Bayi Umur 3 Bulan</h3>
-  <h3>Alat dan bahan yang dibutuhkan:</h3>
-  <mat-list role="list">
-    <mat-list-item role="listitem"> <li>Wool Merah</li> </mat-list-item>
-  </mat-list>
 
   <!-- Wool Merah Table -->
   <table class="table table-bordered">
     <thead>
       <tr>
         <th scope="col">No</th>
-        <th scope="col">Questionare</th>
-        <th style="width: 200px" scope="col">Aksi</th>
-        <th style="width: 100px" scope="col">Jawaban</th>
+        <th scope="col">Kegiatan Yang Diamati</th>
+        <th style="width: 50px" scope="col">0</th>
+        <th style="width: 50px" scope="col">1</th>
+        <th style="width: 50px" scope="col">2</th>
+        <th style="width: 50px" scope="col">3</th>
       </tr>
     </thead>
     <tbody>
@@ -108,26 +83,20 @@
           bergerak dengan mudah? Jawaban TIDAK bila salah satu atau kedua
           tungkai atau lengan bayi bergerak tak terarah/tak terkendali
         </td>
-        <td>Gerak Kasar</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>
           Pada waktu bayi terlentang apakah ia melihat dan menatap wajah anda?
         </td>
-        <td>Sosialisasi dan Kemandirian</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">3</th>
@@ -135,13 +104,10 @@
           Apakah bayi dapat mengeluarkan suara-suara lain (ngoceh) selain
           menangis?
         </td>
-        <td>Bicara dan Bahasa</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">4</th>
@@ -149,26 +115,20 @@
           Pada waktu anda mengajak bayi berbicara dan tersenyum, apakah ia
           tersenyum kembali kepada anda?
         </td>
-        <td>Sosialisasi dan Kemandirian</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">5</th>
         <td>
           Apakah bayi suka tertawa keras walau tidak digelitik atau diraba−raba?
         </td>
-        <td>Bicara dan Bahasa</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">6</th>
@@ -177,13 +137,10 @@
           dari samping kiri ke kanan kepala. Apakah ia dapat mengikuti gerakan
           anda dengan menggerakkan kepalanya dari kanan/kiri ke tengah?
         </td>
-        <td>Gerak Halus</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">7</th>
@@ -193,13 +150,10 @@
           anda dengan menggerakkan kepalanya dari satu sisi hampir sampai pada
           sisi yang lain?
         </td>
-        <td>Gerak Halus</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">8</th>
@@ -207,13 +161,10 @@
           Pada waktu bayi telungkup di alas yang datar, apakah ia dapat
           mengangkat kepalanya seperti pada gambar ini?
         </td>
-        <td>Gerak Kasar</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">9</th>
@@ -221,13 +172,10 @@
           Pada waktu bayi telungkup di alas yang datar, apakah ia dapat
           mengangkat kepalanya sehingga membentuk sudut 45 ̊ seperti pada gambar?
         </td>
-        <td>Gerak Kasar</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <th scope="row">10</th>
@@ -235,18 +183,24 @@
           Pada waktu bayi telungkup di alas yang datar, apakah ia dapat
           mengangkat kepalanya dengan tegak seperti pada gambar?
         </td>
-        <td>Gerak Kasar</td>
-        <td>
-          <mat-radio-group aria-label="Select an option">
-            <mat-radio-button value="1">Ya</mat-radio-button>
-            <mat-radio-button value="2">Tidak</mat-radio-button>
-          </mat-radio-group>
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <th colspan="3" scope="row">Total</th>
+        <th colspan="2" scope="row">Jumlah</th>
         <td></td>
-        <!-- <td></td> -->
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <th colspan="2" scope="row">Nilai Total</th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
