--- a/src/Bintangku.WebUI/client/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/Bintangku.WebUI/client/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -2,7 +2,17 @@
   <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
     <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
   </a>
+
   <div *ngIf="accountService.currentUser$ | async">
+    <a
+      *appHasRole="['Admin']"
+      mat-list-item
+      routerLink="/admin"
+      (click)="onSidenavClose()"
+    >
+      <mat-icon>assignment_ind</mat-icon>
+      <span class="nav-caption">Admin</span>
+    </a>
     <a mat-list-item routerLink="/nakes-members" (click)="onSidenavClose()">
       <mat-icon>assignment_ind</mat-icon>
       <span class="nav-caption">Tenaga Kesehatan</span>
